# lemurs

./: .gitignore  Cargo.toml  README.md  TODO.txt  bytebeats.asm  instruction_listing.txt
src/: evolve.rs  instruction.rs  interpret.rs  lemurs_app.rs  lib.rs  machine.rs  main.rs
